--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "next": "13.4.9",
+    "next": "^13.4.12",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
