--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^13.4.12",
     "postcss": "8.4.25",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
