--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_GOOGLE_MAP_API_KEY = "AIzaSyBJbHycEFd_RMKMBe-PDyOBk6sKx-s6eo4"
 REACT_BASE_URL= "http://194.163.167.131:8030/api"
+REACT_REGISTRATION_KEY="admin@oreDigital"
