--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.11.0",
     "react-input-verification-code": "^1.0.2",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.7.2",
