--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bootstrap-icons": "^1.11.1",
     "next": "^13.4.16",
     "postcss": "8.4.25",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-input-verification-code": "^1.0.2",
