--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
+    "rwanda": "^2.1.6",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
