--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -18,6 +20,7 @@
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.11.1",
     "next": "^13.4.16",
+    "pdfjs-dist": "^3.11.174",
     "postcss": "8.4.25",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
@@ -35,5 +38,8 @@
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
