--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.11.1",
+    "file-saver": "^2.0.5",
     "next": "^13.4.16",
     "pdfjs-dist": "^3.11.174",
     "postcss": "8.4.25",
@@ -35,11 +36,14 @@
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "rwanda": "^2.1.6",
+    "sheetjs-style": "^0.15.8",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "raw-loader": "^4.0.2"
   }
 }
